2007-07-19  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/ViewParams.h (ViewParams): New members: m_radius,
	m_radiusUpdated, m_planetAxis, m_planetAxisUpdated.
	* src/lib/ViewParams.cpp (ViewParams): Initialize new members
	* src/lib/Marble{Model,Widget}.{h,cpp}: Move lots of methods from
	MarbleModel to MarbleWidget.
	(paintGlobe): New parameter redrawBackground
	* src/lib/katlasviewinputhandler.{h,cpp}: adapt to changes above.
	
2007-07-18  Torsten Rahn  <rahn@kde.org>

- Redo for the GPS tab (Now called "Current Location")
- Disabling that widget as it's meant to be offered just for a
particular use case where Marble is meant to provide a dialog

Sorry Andrew - I needed these changes immediately 
for a presentation yesterday.

2007-07-15  Torsten Rahn  <rahn@kde.org>

- Making Marble compile again.

2007-07-12  Andrew Manson   <g.real.ate@gmail.com>
    Cleaned up the comments for all of the AbstractLayer classes and
    formalised the api more.
    
    AbstractLayer now contains a Vector of AbstractLayerContainers 
    and a simple implementation to call each of their draw() methods
    when the AbstractLayer draw() method is called.
    * src/lib/AbstractLayer/AbstractLayer.{h,cpp}
    
2007-07-12  Murad Tagirov  <tmurad@gmail.com>
    Inherit KMLPlaceMark from Placemark to not touch
    placemarks painting at this step
    * src/lib/kml/KMLPlaceMark.h

    Added method to KMLDocument to obtain active PlaceMarkContainer.
    PlaceMarkManager uses this to get placemarks which are on a screen
    * src/lib/kml/KMLDocument.{h,cpp}
    * src/lib/placemarkmanager.{h,cpp}

    Updated kml-tasks after talk on IRC with Torsten
    * projects/kml/kml-tasks

2007-07-11  Torsten Rahn  <rahn@kde.org>

- Fixed tiny build problem introduced by WildFox.
- Various tiny cleanups

2007-07-11  Murad Tagirov  <tmurad@gmail.com>

    Added support to open kml files from dialog
    * src/QtMainWindow.cpp

    Use ifdef in addPlaceMarkFile method to apply new kml parsing