@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>227</width>
-    <height>617</height>
+    <height>576</height>
    </rect>
   </property>
   <property name="sizePolicy" >
@@ -54,15 +54,15 @@
       <string>This control panel allows you to adjust the map according to your needs.</string>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="NavigationTab" >
       <property name="geometry" >
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>227</width>
-        <height>493</height>
+        <width>211</width>
+        <height>492</height>
        </rect>
       </property>
       <attribute name="label" >
@@ -423,8 +423,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>112</width>
-        <height>112</height>
+        <width>227</width>
+        <height>452</height>
        </rect>
       </property>
       <attribute name="label" >
@@ -451,8 +451,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>112</width>
-        <height>112</height>
+        <width>227</width>
+        <height>452</height>
        </rect>
       </property>
       <attribute name="label" >
@@ -465,6 +465,59 @@
        <property name="spacing" >
         <number>6</number>
        </property>
+       <item>
+        <widget class="QLabel" name="projectionLabel" >
+         <property name="text" >
+          <string>&amp;Projection</string>
+         </property>
+         <property name="buddy" >
+          <cstring>projectionComboBox</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="projectionComboBox" >
+         <property name="enabled" >
+          <bool>false</bool>
+         </property>
+         <item>
+          <property name="text" >
+           <string>Globe</string>
+          </property>
+         </item>
+         <item>
+          <property name="text" >
+           <string>Map</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType" >
+          <enum>QSizePolicy::Fixed</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>10</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QLabel" name="mapThemeLabel" >
+         <property name="text" >
+          <string>&amp;Theme</string>
+         </property>
+         <property name="buddy" >
+          <cstring>katlasThemeSelectView</cstring>
+         </property>
+        </widget>
+       </item>
        <item>
         <widget class="KAtlasThemeSelectView" name="katlasThemeSelectView" >
          <property name="sizePolicy" >
@@ -484,6 +537,9 @@
          <property name="autoFillBackground" >
           <bool>true</bool>
          </property>
+         <property name="verticalScrollMode" >
+          <enum>QAbstractItemView::ScrollPerPixel</enum>
+         </property>
         </widget>
        </item>
       </layout>
@@ -494,7 +550,7 @@
         <x>0</x>
         <y>0</y>
         <width>227</width>
-        <height>493</height>
+        <height>452</height>
        </rect>
       </property>
       <attribute name="label" >
@@ -533,7 +589,10 @@
           <item>
            <widget class="QLabel" name="m_latLabel" >
             <property name="text" >
-             <string>Latitude</string>
+             <string>&amp;Latitude</string>
+            </property>
+            <property name="buddy" >
+             <cstring>m_latSpinBox</cstring>
             </property>
            </widget>
           </item>
@@ -607,7 +666,10 @@
           <item>
            <widget class="QLabel" name="m_lonLabel" >
             <property name="text" >
-             <string>Longitude</string>
+             <string>L&amp;ongitude</string>
+            </property>
+            <property name="buddy" >
+             <cstring>m_lonSpinBox</cstring>
             </property>
            </widget>
           </item>
@@ -845,11 +907,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>SearchListView</class>
-   <extends>QListView</extends>
-   <header>searchlistview.h</header>
-  </customwidget>
-  <customwidget>
    <class>LegendBrowser</class>
    <extends>QTextBrowser</extends>
    <header>LegendBrowser.h</header>
@@ -858,6 +915,11 @@
    <class>KAtlasThemeSelectView</class>
    <extends>QListView</extends>
    <header>katlasthemeselectview.h</header>
+  </customwidget>
+  <customwidget>
+   <class>SearchListView</class>
+   <extends>QListView</extends>
+   <header>searchlistview.h</header>
   </customwidget>
  </customwidgets>
  <resources>
